// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`filter-omf-motions should keep a named motion 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Filtered omf motions <resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf, 1/3 kept",
    "Filtered omf file written into <sandbox>/kept-idle.omf",
  ],
}
`;

exports[`filter-omf-motions should keep motions by prefix 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Filtered omf motions <resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf, 2/3 kept",
    "Filtered omf file written into <sandbox>/kept-svd.omf",
  ],
}
`;

exports[`filter-omf-motions should read back only the kept motions 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read omf file <sandbox>/kept-svd.omf",
    "Omf file information",
    "Version: 4",
    "Motions: 2 svd_shoot,svd_reload",
    "Bones total: 7",
    "Parts: default",
    "Part 'default' bones: wpn_body,body,trigger,wpn_scope,zatvor,lock,magazin",
  ],
}
`;

exports[`filter-omf-motions should report a dry run without writing 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Filtered omf motions <resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf, 1/3 kept",
    "Dry run, nothing written, <sandbox>/never-written.omf would receive 1 motions",
  ],
}
`;

exports[`filter-omf-motions should write the expected files 1`] = `
[
  {
    "path": "kept-idle.omf",
    "sha256": "0d6070cb2dc20aa5a4b1231db0ec8e4e855e98dea2ce2d317670177209525e66",
    "size": 321,
  },
  {
    "path": "kept-svd.omf",
    "sha256": "e4d8b2326e0d3455d5e4efa81447008b453d3355b8fc0e8c05636e6838ec65dd",
    "size": 3158,
  },
]
`;
